--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		 <sonar.host.url>http://54.169.137.65:9000/</sonar.host.url>
+		 <sonar.host.url>http://35.154.215.70:9000/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>  
+		<sonar.password>24"Vishnu</sonar.password>  
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
